# Model-Hub-Service

./: .gitignore  Cargo.toml  README.md
docs/: README.md  api-examples.md  api-overview.md  auth.md  i18n-keys.md  license.md  logs.md  openapi.yaml  profile.md  tokens.md  users.md
docs/api/: auth.md  dashboard.md  data-platform.md  features.md  license.md  models-and-scoring.md  operations.md  portraits-and-targets.md  sql-and-logs.md  users-and-profile.md
docs/database/: enums-and-statuses.md  overview.md  relationships.md  tables.md
migrations/: 001_create_users.sql  002_create_tokens.sql  003_create_licenses.sql  004_create_logs.sql  005_add_indexes.sql
src/: config.rs  db.rs  errors.rs  main.rs  pagination.rs  routes.rs
src/handlers/: auth.rs  license.rs  logs.rs  mod.rs  profile.rs  tokens.rs  users.rs
src/middleware/: auth.rs
src/models/: license.rs  log.rs  mod.rs  token.rs  user.rs
